fix building and fix fontsize on mobile
i seperated building into building and buildin for cinnamon i also fixed
mobile font-sixe

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -24,7 +24,8 @@
   --font-neutral: 12px;
   --font-md: 16px;
   --font-lg: 24px;
-  --font-xlg: 48px;
+  --font-xlg: 32px;
+  --font-xxlg:48px;
 
   --space-xs: 0.25rem;
   --space-sm: 0.4rem;
